--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <h2 class="title mt-5 mb-5">What ?</h2>
+    <h2 class="title mt-5 mb-5">What is new? <span id="currentDate"></span></h2>
+
     <div class="container">
         <div class="row">
 
@@ -28,8 +29,36 @@
                         onclick="App.handleAuthClick()">Authorize</button>
                 </div>
             </div>
-
             <div class="col-12">
+                <div class="item mt-3">
+                    <button type="button" class="btn btn btn-outline-secondary" data-toggle="modal"
+                        data-target="#exampleModalScrollable" id="information_button">Show
+                        information</button>
+                </div>
+
+
+                <!-- Modal -->
+                <div style="color: #111;" class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalScrollableTitle">Statistic Month</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Total: <span id="totalCost"></span></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-12">
                 <div class="item mt-3">
 
                     <button class="btn btn btn-outline-secondary" id="signout_button"
@@ -70,6 +99,22 @@
                     <button class="btn btn btn-outline-info" id="create_new_sheet_button"
                         onclick="App.handleCreateNewSheetClick()">Create new sheets</button>
                 </div>
+            </div> -->
+            <div class="col-12">
+                <div class="row">
+                    <form id="formInput" class="input-income mt-3">
+                        <div class="col-12 form-group">
+                            <input type="number" class="form-control" id="cost" placeholder="Enter cost">
+                        </div>
+                        <div class="col-12 form-group">
+                            <input type="text" class="form-control" id="content" placeholder="Enter content">
+                        </div>
+                        <div class="col-12 form-group">
+                            <button class="btn btn-primary" id="submit">Save</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
 
@@ -86,6 +131,7 @@
             background-color: #111;
             color: white;
         }
+
         .title {
             text-align: center;
         }
@@ -98,6 +144,10 @@
         .item button {
 
             width: 300px;
+        }
+
+        .input-income {
+            width: 100%;
         }
     </style>
     <script src="./App.js"></script>
